--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,7 @@
 
       <div class="px-5 py-2">
         <a
-          href="https://investors.appfolioim.com/ritchiegroup/investor"
+          href="https://theritchiegroup.portal.agorareal.com/#/login?redirectUrl=%2F"
           class="text-base text-gray-100 hover:text-gray-400"
         >
           Investor Portal
